--- a/trunk/Changes
+++ b/trunk/Changes
@@ -1,6 +1,8 @@
 Revision history for Perl extension Password::Check.
 
+0.06 Wed Jul 11 12:14:36 BST 2007
 	- added diverse_characters (from: Dermot McNally)
+	- added tests for diverse_characters
 	- modified POD: author email changed, added CONTRIBUTORS and PROJECT HOMEPAGE
 
 0.05 Sun Oct  9 17:54:12 BST 2005
