--- a/trunk/Changes
+++ b/trunk/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Password::Check.
 
+0.07 Wed Jul 11 17:15:59 BST 2007
+	- fixed up borked mix-up of Data::Dump/Data::Dumper in the
+	  diverse_characters test
+
 0.06 Wed Jul 11 12:14:36 BST 2007
 	- added diverse_characters (from: Dermot McNally)
 	- added tests for diverse_characters
