--- a/trunk/Changes
+++ b/trunk/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Password::Check.
 
+0.08 Thu Jul 12 10:26:53 BST 2007
+	- fixed MANIFEST to prevent "Warning: the following files are missing in
+	  your kit:" error
+
 0.07 Wed Jul 11 17:15:59 BST 2007
 	- fixed up borked mix-up of Data::Dump/Data::Dumper in the
 	  diverse_characters test
